--- a/integradora/index.html
+++ b/integradora/index.html
@@ -1,12 +1,92 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tu Antojito</title>
-    
+    <title>Página de Botanas</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="javascript/script.js" defer></script>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="logo.png" alt="Logo de la Tienda">
+        </div>
+        <nav>
+            <ul>
+                <li><a href="#" id="login-link">Iniciar Sesión</a></li>
+                <li><a href="#" id="register-link">Registrarse</a></li>
+                <li><a href="#" id="logout-link" style="display:none;">Cerrar Sesión</a></li>
+                <li><a href="#" id="recover-link">Recuperar Contraseña</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="products">
+            <h1>Nuestras Botanas</h1>
+            <div class="product">
+                <img src="botana1.jpg" alt="Botana 1">
+                <h2>Botana 1</h2>
+                <p>Descripción de la botana 1. Disponible.</p>
+            </div>
+            <div class="product">
+                <img src="botana2.jpg" alt="Botana 2">
+                <h2>Botana 2</h2>
+                <p>Descripción de la botana 2. No disponible.</p>
+            </div>
+            <!-- Agrega más productos aquí -->
+        </section>
+
+        <aside>
+            <h2>Chatbot</h2>
+            <a href="chatbot.html">Haz clic aquí para más información</a>
+        </aside>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Tienda de Botanas. Todos los derechos reservados.</p>
+    </footer>
+
+    <!-- Modales para las funcionalidades -->
+    <div id="login-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Iniciar Sesión</h2>
+            <form id="login-form">
+                <label for="username">Usuario:</label>
+                <input type="text" id="username" name="username" required>
+                <label for="password">Contraseña:</label>
+                <input type="password" id="password" name="password" required>
+                <button type="submit">Ingresar</button>
+            </form>
+        </div>
+    </div>
+
+    <div id="register-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Registrarse</h2>
+            <form id="register-form">
+                <label for="new-username">Usuario:</label>
+                <input type="text" id="new-username" name="new-username" required>
+                <label for="new-password">Contraseña:</label>
+                <input type="password" id="new-password" name="new-password" required>
+                <button type="submit">Registrar</button>
+            </form>
+        </div>
+    </div>
+
+    <div id="recover-modal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h2>Recuperar Contraseña</h2>
+            <form id="recover-form">
+                <label for="recover-email">Email:</label>
+                <input type="email" id="recover-email" name="recover-email" required>
+                <button type="submit">Recuperar</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
