--- a/integradora/index.html
+++ b/integradora/index.html
@@ -3,90 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Botanas</title>
+    <title>Tienda de Botanas</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="javascript/script.js" defer></script>
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="logo.png" alt="Logo de la Tienda">
-        </div>
+        <img src="images/logo.png" alt="Logo de la Tienda" class="logo">
         <nav>
             <ul>
-                <li><a href="#" id="login-link">Iniciar Sesión</a></li>
-                <li><a href="#" id="register-link">Registrarse</a></li>
-                <li><a href="#" id="logout-link" style="display:none;">Cerrar Sesión</a></li>
-                <li><a href="#" id="recover-link">Recuperar Contraseña</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="eventos.html">Eventos</a></li>
+                <li class="dropdown">
+                    <a href="javascript:void(0)" class="dropbtn">Categorías</a>
+                    <div class="dropdown-content">
+                        <a href="picoso.html">Picoso</a>
+                        <a href="dulce.html">Dulce</a>
+                    </div>
+                </li>
             </ul>
         </nav>
+        <div class="auth-buttons">
+            <button onclick="showLoginForm()">Iniciar Sesión</button>
+            <button onclick="showRegisterForm()">Registrarse</button>
+            <button onclick="logout()">Cerrar Sesión</button>
+            <button onclick="showRecoverForm()">Recuperar Contraseña</button>
+        </div>
     </header>
 
     <main>
-        <section class="products">
-            <h1>Nuestras Botanas</h1>
-            <div class="product">
-                <img src="botana1.jpg" alt="Botana 1">
-                <h2>Botana 1</h2>
-                <p>Descripción de la botana 1. Disponible.</p>
+        <section id="auth-forms">
+            <div id="login-form" class="auth-form">
+                <h2>Iniciar Sesión</h2>
+                <input type="text" id="login-email" placeholder="Correo Electrónico">
+                <input type="password" id="login-password" placeholder="Contraseña">
+                <button onclick="login()">Entrar</button>
             </div>
-            <div class="product">
-                <img src="botana2.jpg" alt="Botana 2">
-                <h2>Botana 2</h2>
-                <p>Descripción de la botana 2. No disponible.</p>
+            <div id="register-form" class="auth-form">
+                <h2>Registrarse</h2>
+                <input type="text" id="register-email" placeholder="Correo Electrónico">
+                <input type="password" id="register-password" placeholder="Contraseña">
+                <button onclick="register()">Registrarse</button>
             </div>
-            <!-- Agrega más productos aquí -->
+            <div id="recover-form" class="auth-form">
+                <h2>Recuperar Contraseña</h2>
+                <input type="text" id="recover-email" placeholder="Correo Electrónico">
+                <button onclick="recoverPassword()">Recuperar</button>
+            </div>
         </section>
 
-        <aside>
-            <h2>Chatbot</h2>
-            <a href="chatbot.html">Haz clic aquí para más información</a>
-        </aside>
+        <section id="main-content">
+            <h1>Bienvenido a la Tienda de Botanas</h1>
+            <div class="search-bar">
+                <input type="text" id="search" placeholder="Buscar productos...">
+                <button onclick="searchProducts()">Buscar</button>
+            </div>
+            <div id="product-list">
+                <!-- Productos se cargarán aquí -->
+            </div>
+        </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 Tienda de Botanas. Todos los derechos reservados.</p>
+        <p>© 2024 Tienda de Botanas</p>
     </footer>
 
-    <!-- Modales para las funcionalidades -->
-    <div id="login-modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Iniciar Sesión</h2>
-            <form id="login-form">
-                <label for="username">Usuario:</label>
-                <input type="text" id="username" name="username" required>
-                <label for="password">Contraseña:</label>
-                <input type="password" id="password" name="password" required>
-                <button type="submit">Ingresar</button>
-            </form>
-        </div>
-    </div>
-
-    <div id="register-modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Registrarse</h2>
-            <form id="register-form">
-                <label for="new-username">Usuario:</label>
-                <input type="text" id="new-username" name="new-username" required>
-                <label for="new-password">Contraseña:</label>
-                <input type="password" id="new-password" name="new-password" required>
-                <button type="submit">Registrar</button>
-            </form>
-        </div>
-    </div>
-
-    <div id="recover-modal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Recuperar Contraseña</h2>
-            <form id="recover-form">
-                <label for="recover-email">Email:</label>
-                <input type="email" id="recover-email" name="recover-email" required>
-                <button type="submit">Recuperar</button>
-            </form>
-        </div>
-    </div>
+    <script src="javascript/script.js"></script>
 </body>
 </html>
